tabs/000-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: tabs # Change this value if you want a different namespace name
  labels:
    name: tabs # Change this value to match metadata.name
