tabs/400-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: tabs
  name: tabs
  labels:
    app: tabs

spec:
  replicas: 1
  selector:
    matchLabels:
      app: tabs
  template:
    metadata:
      labels:
        app: tabs
    spec:
      containers:
        - name: tabs
          image: ${TABS_IMAGE}:${TABS_VERSION}
          args: ['node', '/usr/src/app/index.js']
          ports:
            - name: tabs
              containerPort: 80
