tabs/300-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tabs
  namespace: tabs

spec:
  ports:
    - protocol: TCP
      name: tabs
      port: 80
  selector:
    app: tabs
