tabs/500-ingress.yaml
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tabs
  namespace: tabs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: ${TABS_FQDN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tabs
            port:
              number: 80
  tls:
    - secretName: tabs-tls
      hosts:
        - ${TABS_FQDN}
